# PK_FarewellPackage

./: FarewellPackage_PernillaKuehn.docx  README.md
software_atmo/: README.md  prep_TM5-4DVar.py  selectObsPackData.py
software_levante/: mkAVAIL_v7.py
software_levante/NA_inversion/: README.md  analyse_inversion.py  analyze_inv.sh  calc_enhancement_parts.py  prep_inv.sh  prepare_inversion.py  run_inv.sh  run_inversion.py  utils.py
software_levante/convert_era5/: README.md  pyproject.toml  requirements.txt
software_levante/convert_era5/convert_era5/: Bulkstart_prepare_EA_files.sh  ConvertANOG__ML.sh  README_convert_era5_dkrz_ml_v5  Start_ConvertEra5.sh  __init__.py  adjust_fc_file.sh  check_status.sh  convert_ANOG__ML.py  convert_era5_dkrz_ml_v6.py  prepare_EA_files.sh  prepare_flexpart.sh  sh_merge.sh
software_levante/convert_era5/convert_era5/config/: CONTROL_EA5_dummy  CONTROL_test  config_2010.yaml  config_test.yaml  flexextract_files.csv
software_levante/convert_era5/metviewPythonPackage/: ConvertANOG__ML.sh  README  Start_ConvertEra5.sh  __init__.py  adjust_fc_file.sh  config_convert_era5.yaml  convert_ANOG__ML.py  convert_era5_dkrz_ml_v5.py  convert_era5_dkrz_ml_v6.py  sh_merge.sh
software_levante/convert_era5/metviewPythonPackage/config/: config_FCOG.yaml  config_convert_era5.yaml  param_files.csv
software_levante/flexpart_v11_start_multiple/: Bulkstart_multiple.sh  README.md  create_GOSATpositions.py  create_ISpositions.py  create_part_init.py  prepare_GOSATruns.py  prepare_ISruns.py  slurm_flexpart_v11.sh  slurm_start_multiple.sh
(+13 files in other folders)
